--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/three": "^0.164.0",
     "classnames": "^2.5.1",
     "electron": "^30.0.2",
+    "electron-store": "^10.0.1",
     "eslint-config-react-app": "^7.0.1",
     "glea": "^1.3.1",
     "grunt": "^1.6.1",
