--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/react-dom": "^18.3.0",
     "@types/react-transition-group": "^4.4.10",
     "@types/three": "^0.164.0",
+    "bootstrap": "^5.3.3",
     "classnames": "^2.5.1",
     "electron": "^30.0.2",
     "eslint-config-react-app": "^7.0.1",
@@ -39,9 +40,11 @@
     "grunt-eslint": "^24.3.0",
     "grunt-exec": "^3.0.0",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.5",
+    "resolve": "^1.22.10",
     "sass": "^1.76.0",
     "three": "^0.164.1",
     "typescript": "^4.9.5",
@@ -82,5 +85,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "terser": "^5.39.0"
   }
 }
