--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/react-dom": "^18.3.0",
     "@types/react-transition-group": "^4.4.10",
     "@types/three": "^0.164.0",
+    "bootstrap": "^5.3.5",
     "classnames": "^2.5.1",
     "electron": "^30.0.2",
     "eslint-config-react-app": "^7.0.1",
@@ -40,6 +41,7 @@
     "grunt-exec": "^3.0.0",
     "localforage": "^1.10.0",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.5",
